--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
     "espress": "0.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "vue-axios": "^3.3.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
