--- a/frontend/frontvue/package.json
+++ b/frontend/frontvue/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.7",
     "vue": "^3.0.0",
     "vue-axios": "^3.3.7",
     "vue-router": "^4.0.0-0",
