--- a/frontend/frontvue/package.json
+++ b/frontend/frontvue/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@sweetalert2/themes": "^5.0.5",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
